syntax = "proto3";

message AJPKFJDOKFH {
	uint32 DPJGKAGIAOH = 11;
	uint32 main_prop_id = 3;
}