syntax = "proto3";

message EJOBMPBBBIA {
	uint64 guid = 2;
	uint32 level = 3;
	uint32 promote_level = 4;
	uint32 item_id = 1;
}