syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";
// Version: 5.0
// CmdId: 27937

message PlayerPropChangeNotify {
    uint32 prop_delta = 7;
    uint32 prop_type = 13;
}